@@ -13,7 +13,7 @@ package org.eclipse.lsp4e.test.operations.codelens;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 
@@ -97,7 +97,7 @@ public class LSPCodeMiningTest extends AbstractTestWithProject {
 		Command command = lens.getCommand();
 		final var jsonObject = new JsonObject();
 		jsonObject.addProperty("bar", 42);
-		command.setArguments(Arrays.asList(new JsonPrimitive("Foo"), jsonObject));
+		command.setArguments(List.of(new JsonPrimitive("Foo"), jsonObject));
 
 		// Setup test data
 		IFile file = TestUtils.createUniqueTestFile(project, "lspt", "test content");
